# trustplane-auth-sdk-python

./: .gitignore  AGENTS.md  LICENSE  README.md  SECURITY.md  pyproject.toml
.github/: release-signing-key.asc
.github/workflows/: pr.yml  release-pypi.yml
docs/: current-cli-parity.md  release-pypi.md
scripts/: scan-leaks.sh  scan-wording.sh  smoke-wheel.sh
src/trustplane_auth/: __init__.py  broker.py  enrollment.py  keys.py  passport.py  profile.py  protected_client.py  signing.py  transcript.py  workload_profiles.py
testdata/conformance/v1/: README.md  body-sha256-v1.json  broker-ipc-v1.denied.json  broker-ipc-v1.success.json  bundle-v1.source-rules.json  manifest.json  passport-v1.minimal-valid-claims.json  signer-taxonomy-v1.json  transcript-v1.ambiguous-query-headers.json  transcript-v1.json
testdata/workload-profile-resolution-v1/: golden-transcript.json
tests/: test_capabilities.py  test_sdk.py  test_workload_profiles.py
