[build-system]
requires = ["hatchling>=1.25"]
build-backend = "hatchling.build"

[project]
name = "trustplane-auth-sdk"
version = "0.2.2"
description = "Python SDK foundation for TrustPlane Auth request material and local Ed25519 signing"
readme = "README.md"
requires-python = ">=3.10"
license = "Apache-2.0"
authors = [
  { name = "TrustPlane" }
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: Apache Software License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Security :: Cryptography"
]
dependencies = [
  "cryptography>=42"
]

[project.optional-dependencies]
dev = [
  "build>=1.2",
  "mypy>=1.10",
  "pytest>=8",
  "ruff>=0.5"
]

[project.urls]
Homepage = "https://github.com/trustplane-dev/trustplane-auth-sdk-python"
Repository = "https://github.com/trustplane-dev/trustplane-auth-sdk-python"

[tool.hatch.build.targets.wheel]
packages = ["src/trustplane_auth"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.ruff.format]
quote-style = "double"

[tool.mypy]
python_version = "3.10"
strict = true
packages = ["trustplane_auth"]

[tool.pytest.ini_options]
testpaths = ["tests"]
